docs: minor fix
