# application/app/Http/Controllers/AuthController.php
@@ -173,10 +173,11 @@ class AuthController extends Controller
      *         description="Successful operation",
      *         @OA\JsonContent(
      *      type="object",
-     *      @OA\Property(property="id", type="string", example="8668ff92b803-f76a-8f0a0898-4ed6-b892"),
-     *      @OA\Property(property="value", type="number", example="100.25"),
-     *      @OA\Property(property="sender_id", type="string", example="8f0a0898-f76a-4ed6-b892-8668ff92b803"),
-     *      @OA\Property(property="receiver_id", type="string", example="e3ba9153-85b8-4ad4-8935-dc48482c4adb"),
+     *      @OA\Property(property="name", type="string", example="John Doe"),
+     *      @OA\Property(property="email", type="string", example="johndoe@johndoe.com"),
+     *      @OA\Property(property="cpf", type="string", example="23443522017"),
+     *      @OA\Property(property="role", type="string", example="lojista"),
+     *      @OA\Property(property="id", type="string", example="c18d67e4-acbd-4f25-accd-3587a0ebd219"),
      *      @OA\Property(property="created_at", type="string", example="2023-06-25T17:56:59.000000Z"),
      *      @OA\Property(property="updated_at", type="string", example="2023-06-25T17:56:59.000000Z"),
      *   ),
